--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <input type="text" id="line1" name="line1" placeholder="Seller Name" required>
 
                     <label for="line2">Item Name:</label>
-                    <input type="text" id="line2" name="line2" placeholder="Item Name" required>
+                    <textarea id="line2" name="line2" placeholder="Item Name" required></textarea>
+
 
                     <label for="line3" id="line3-label" style="display: none;"></label>
                     <input type="text" id="line3" name="line3" placeholder="Enter Line 3" style="display: none;">
